# CMake

./: CMakeLists.txt  area.cpp  area.h  main.cpp  size.txt
